add custom xml gen